tests/NormalTests/paczka1/small_fuzzy/33776069.err
Error in line 5: fPZ30ZrsdS A170 61,42
Error in line 6: Cy8 S838 8,7
Error in line 10: fPZ30ZrsdS A170 189,91
Error in line 2: fPZ30ZrsdS S212 16,2
